Add interest-rate and opening balance